# Packed-ResNet

./: .gitignore  README.md  pyproject.toml
src/packed_resnet/: __init__.py  data.py  layers.py  models.py  triton_ops.py  wide_resnet.py
tests/: benchmark_dataloader.py  benchmark_gpu_timing.py  test_data.py  test_packed_mlp.py  test_packed_wide_resnet.py  test_triton_ops.py
