[project]
name = "packed-resnet"
version = "0.1.0"
description = "Packed Wide ResNet modules for simulating multiple local models in one PyTorch model"
readme = "README.md"
authors = [
    { name = "Zesen Wang", email = "zesen@kth.se" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "torch==2.12.0+cu130",
]

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 100
